Change youtube slider's id and class back to yt_list

--- a/baseball.html
+++ b/baseball.html
@@ -42,7 +42,7 @@ slides:
       <div class="col-md-12">
         <div id="wrapper">
           <h2><i class="fas fa-video f-color"></i>&#160;Videos</h2>
-        	<div id="yt_list_bb" class="yt_list_bb">
+        	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
         	</div>
