Fix broken image links. Prefix svg img's src with {{site.baseurl}}

--- a/baseball.html
+++ b/baseball.html
@@ -20,7 +20,7 @@ slides:
 <section class="container content-marg">
     <div class="row schedule-row">
       <div class="col-md-12">
-        <h2><img src="assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
+        <h2><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
         <div id="track" class="baseball slick games" ></div>
       </div>
     </div>
@@ -43,7 +43,7 @@ slides:
     <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2><img src="assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
+          <h2><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
