--- a/baseball.html
+++ b/baseball.html
@@ -20,13 +20,13 @@ slides:
 <section class="container content-marg">
     <div class="row schedule-row">
       <div class="col-md-12">
-        <h2><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
+        <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
         <div id="track" class="baseball slick games" ></div>
       </div>
     </div>
     <div class="row news-social-row">
       <div class="col-md-8 news-feed">
-        <h2 class="grey-bg"><i class="far fa-newspaper f-color"></i>&#160;News</h2>
+        <h2 class="main-heading grey-bg"><i class="far fa-newspaper f-color"></i>&#160;News</h2>
           <div class="news-scroll">
             {% for item in site.news %}
             <h2>{{ item.title }}</h2>
@@ -36,14 +36,14 @@ slides:
           </div>
       </div>
       <div class="col-md-4">
-        <h2><i class="far fa-images f-color"></i>&#160;Social Media</h2>
+        <h2 class="main-heading"><i class="far fa-images f-color"></i>&#160;Social Media</h2>
         <div class="fb-page" data-href="https://www.facebook.com/KankakeeCommunityCollege/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KankakeeCommunityCollege/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KankakeeCommunityCollege/">Kankakee Community College</a></blockquote></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
+          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
@@ -74,7 +74,7 @@ slides:
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><i class="f-color fas fa-baseball-ball"></i>&#160;&#160;Coaches</h4>
+      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
     </div>
     <div class="row">
       <div class="col-md-4">
