--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ baseurl:
 <section class="container content-marg">
     <div class="row schedule-row">
       <div class="col-md-12">
-        <h2><img src="assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
+        <h2 class="main-heading"><img src="assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games</h2>
         <div id="track" class="slick games" ></div>
       </div>
     </div>
     <div class="row news-social-row">
       <div class="col-md-8 news-feed">
-        <h2 class="grey-bg"><i class="far fa-newspaper f-color"></i>&#160;News</h2>
+        <h2 class="main-heading grey-bg"><i class="far fa-newspaper f-color"></i>&#160;News</h2>
         <div class="news-scroll">
             {% for item in site.news %}
             <h2>{{ item.title }}</h2>
@@ -24,14 +24,14 @@ baseurl:
         </div>
       </div>
       <div class="col-md-4">
-        <h2><i class="far fa-images f-color"></i>&#160;Social Media</h2>
+        <h2 class="main-heading"><i class="far fa-images f-color"></i>&#160;Social Media</h2>
         <div class="fb-page" data-href="https://www.facebook.com/KankakeeCommunityCollege/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KankakeeCommunityCollege/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KankakeeCommunityCollege/">Kankakee Community College</a></blockquote></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2><img src="assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
+          <h2 class="main-heading"><img src="assets/img/video.svg" class="icon-middle" alt="Video icon">&#160;Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
