--- a/baseball.html
+++ b/baseball.html
@@ -2,7 +2,7 @@
 layout: landing-fb
 baseurl: ../
 slides:
-  - image: assets/img/header-bg2.jpg
+  - image-1: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text: |-
       2017 NJCAA DIVISION II
