--- a/baseball.html
+++ b/baseball.html
@@ -2,20 +2,40 @@
 layout: landing-fb
 baseurl: ../
 slides:
-  - image-1: assets/img/header-bg2.jpg
+  - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
-    text: |-
+    text1:
+      June 6, 2017 | Baseball
+    text2:
       2017 NJCAA DIVISION II
       NATIONAL CHAMPIONS
   - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
-    text: Apply here
+    text1: Apply here
+    text2: Ipsum Lorem
   - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
-    text: Apply here
+    text1: Apply here
+    text2: Ipsoum Lorem
 ---
 
-{% include baseball-slider.html %}
+<div class="container slider-container">
+  <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
+  <div class="row slider-row">
+      {% for slide in page.slides %}
+    <div class="col-md-12 baseballSlider">
+      <div>
+        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="">
+        <div class="heading-container">
+          <h3 class="sub-heading">{{slide.text1}}</h3>
+          <h3 class="slide-heading">{{slide.text2}}</h3>
+        </div>
+      </div>
+    </div>
+    {% end for %}
+  </div>
+</div>
+
 <!--  Content  -->
 <section class="container content-marg">
     <div class="row schedule-row">
