Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -9,11 +9,11 @@ slides:
     text2:
       2017 NJCAA DIVISION II
       NATIONAL CHAMPIONS
-  - image: assets/img/header-bg2.jpg
+  - image: assets/img/baseball-hero2.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
-  - image: assets/img/header-bg2.jpg
+  - image: assets/img/baseball-hero3.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsoum Lorem
