Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -133,8 +133,8 @@ slides:
       </div>
       <div class="modal-body">
         <img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name">Todd Post</h5>
-        <h6 class="coach-title">Head Coach</h6>
+        <h5 class="coach-name editable">Todd Post</h5>
+        <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8616<br>
         tpost@kcc.edu</p><br>
         <div class="editable">
@@ -165,8 +165,8 @@ slides:
       </div>
       <div class="modal-body">
         <img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
-        <h5 class="coach-name">Bryce Shafer</h5>
-        <h6 class="coach-title">Assistant Coach</h6>
+        <h5 class="coach-name editable">Bryce Shafer</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
         <p>815&#8209;802&#8209;8609<br>
         bshafer@kcc.edu</p><br>
         <div class="editable">
