Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -101,8 +101,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Todd Post</h5>
-            <h6 class="coach-title">Head Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
+            <h6 class="coach-title editable">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8616<br>
             tpost@kcc.edu</p>
           </div>
@@ -112,8 +112,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce Shafer</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
             <p>815&#8209;802&#8209;8609<br>
             bshafer@kcc.edu</p>
           </div>
