Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -13,7 +13,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
+          <img class="img-fluid img-ease editable" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
         <div class="sports-caption">
           <p>
