--- a/sports.html
+++ b/sports.html
@@ -1,6 +1,7 @@
 ---
 layout: landing
 baseurl: ../
+baseball: assets/img/baseball-thumb.jpg
 ---
 
 <section class="sports-section" id="sports">
@@ -13,7 +14,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease editable" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}{{page.baseball}}" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
         <div class="sports-caption">
           <p>
