Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 baseurl: ../
-baseball: assets/img/baseball-thumb.jpg
+baseball_image: assets/img/baseball-thumb.jpg
 ---
 
 <section class="sports-section" id="sports">
