--- a/sports.html
+++ b/sports.html
@@ -14,7 +14,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}{{page.baseball}}" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}{{page.baseball_image}}" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
         <div class="sports-caption">
           <p>
