Change img src to uploads/... not assets/ dir

--- a/baseball.html
+++ b/baseball.html
@@ -2,18 +2,18 @@
 layout: landing-fb
 baseurl: ../
 slides:
-  - image: assets/img/header-bg2.jpg
+  - image: uploads/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text1:
       June 6, 2017 | Baseball
     text2:
       2017 NJCAA DIVISION II
       NATIONAL CHAMPIONS
-  - image: assets/img/baseball-hero2.jpg
+  - image: uploads/baseball-hero2.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
-  - image: assets/img/baseball-hero3.jpg
+  - image: uploads/baseball-hero3.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsoum Lorem
@@ -99,7 +99,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Todd Post</h5>
             <h6 class="coach-title">Head Coach</h6></a>
@@ -110,7 +110,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
             <h6 class="coach-title">Assistant Coach</h6></a>
@@ -132,7 +132,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
         <h5 class="coach-name editable">Todd Post</h5>
         <h6 class="coach-title editable">Head Coach</h6>
         <p>815&#8209;802&#8209;8616<br>
@@ -164,7 +164,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
         <h5 class="coach-name editable">Bryce Shafer</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <p>815&#8209;802&#8209;8609<br>
