--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 ---
 layout: landing-fb
 baseurl:
+slides:
+  - image: uploads/header-bg2.jpg
+    url: 'http://www.kcc.edu'
+    text1:
+      June 6, 2017 | Baseball
+    text2:
+      2017 NJCAA DIVISION II
+      NATIONAL CHAMPIONS
+  - image: uploads/header-bg.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/header-bg3.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsoum Lorem
 ---
 
-{% include hero-slider.html %}
+<div class="container slider-container">
+  <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
+  <div class="row slider-row">
+    <div class="col-md-12 baseballSlider">
+    {% for slide in page.slides %}
+      <div>
+        <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="">
+        <div class="heading-container">
+          <h3 class="sub-heading">{{slide.text1}}</h3>
+          <h3 class="slide-heading">{{slide.text2}}</h3>
+        </div>
+      </div>
+     {% endfor %}
+    </div>
+  </div>
+</div>
 
 <section class="container content-marg">
     <div class="row schedule-row">
