Put baseball img src in YAML front matter
Change img src to /uploads dir

--- a/sports.html
+++ b/sports.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 baseurl: ../
-baseball_image: assets/img/baseball-thumb.jpg
+baseball_image: uploads/baseball-thumb.jpg
 ---
 
 <section class="sports-section" id="sports">
@@ -34,7 +34,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -54,7 +54,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -74,7 +74,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -94,7 +94,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -114,7 +114,7 @@ baseball_image: assets/img/baseball-thumb.jpg
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page" />
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page" />
         </a>
         <div class="sports-caption">
           <p>
