Change all img src to uploads/... from assets/ dir

--- a/sports-facilities.html
+++ b/sports-facilities.html
@@ -6,7 +6,7 @@ baseurl: ../
   <div class="container">
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}assets/img/gymnasium.jpg" alt="Photo of the George S. Ryan Activities Center">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/gymnasium.jpg" alt="Photo of the George S. Ryan Activities Center">
       </div>
       <div class="col-md-8">
         <h2 id="gym" class="blue-heading">George S. Ryan Activities Center</h2>
@@ -16,7 +16,7 @@ baseurl: ../
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}assets/img/aerial-baseball-field.jpg" alt="Aerial Photograph of KCC's baseball field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-baseball-field.jpg" alt="Aerial Photograph of KCC's baseball field">
       </div>
       <div class="col-md-8">
         <h2 id="baseball-field" class="blue-heading">Baseball Field</h2>
@@ -26,7 +26,7 @@ baseurl: ../
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}assets/img/aerial-softball-field.jpg" alt="Aerial Photograph of KCC's softball field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-softball-field.jpg" alt="Aerial Photograph of KCC's softball field">
       </div>
       <div class="col-md-8">
         <h2 id="softball-field" class="blue-heading">Softball Field</h2>
@@ -38,7 +38,7 @@ baseurl: ../
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}assets/img/soccer-field.jpg" alt="Photo of KCC's soccer field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/soccer-field.jpg" alt="Photo of KCC's soccer field">
       </div>
       <div class="col-md-8">
         <h2 id="soccer-field" class="blue-heading">Soccer Field</h2>
