Put title: in YAML head of pages for liquid inclusion...
in page specific titles.

Minor typo fixes in baseball page alt atributes.

--- a/facilities.html
+++ b/facilities.html
@@ -1,6 +1,7 @@
 ---
 layout: sub-nav-landing
 baseurl: ../
+title: Facilities
 ---
 {% include facil-banner.html %}
 <main class="facilities-container">
