--- a/sports-facilities.html
+++ b/sports-facilities.html
@@ -1,6 +1,7 @@
 ---
 layout: sub-nav
 baseurl: ../
+title: Sports Facilities
 ---
 <main class="sports-facilities-container">
   <div class="container">
