--- a/baseball.html
+++ b/baseball.html
@@ -1,6 +1,7 @@
 ---
 layout: landing-fb
 baseurl: ../
+title: Baseball
 slides:
   - image: uploads/header-bg2.jpg
     url: 'http://www.kcc.edu'
@@ -94,7 +95,7 @@ slides:
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
+      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball">&#160;&#160;Coaches</h4>
     </div>
     <div class="row">
       <div class="col-md-4">
@@ -164,7 +165,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
+        <img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Coach Bryce Shafer" class="img-fluid float-left coach-modal-img">
         <h5 class="coach-name editable">Bryce Shafer</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <p>815&#8209;802&#8209;8609<br>
