--- a/baseball.html
+++ b/baseball.html
@@ -2,6 +2,7 @@
 layout: landing-fb
 baseurl: ../
 title: Baseball
+sport: 2
 slides:
   - image: uploads/header-bg2.jpg
     url: 'http://www.kcc.edu'
