Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -3,18 +3,23 @@ layout: landing-fb
 baseurl: ../
 title: Men's Basketball
 slides:
-  - image: uploads/header-bg2.jpg
-    url: 'http://www.kcc.edu'
-    text1:
-      June 6, 2017 | Baseball
-    text2:
-      2017 NJCAA DIVISION II
-      NATIONAL CHAMPIONS
-  - image: uploads/baseball-hero2.jpg
+  - image: uploads/basketball-team_D51_4006.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
-  - image: uploads/baseball-hero3.jpg
+  - image: uploads/basketball-slide-5_DSC_2602.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/basketball-slide-4_DSC_3172.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/basketball-slide-3_DSC_2595.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/basketball-3_DSC_2889.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
