Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -2,6 +2,7 @@
 layout: landing-fb
 baseurl: ../
 title: Men's Basketball
+sport: 4
 slides:
   - image: uploads/basketball-team_D51_4006.jpg
     url: 'http://www.kcc.edu'
