Remove FontAwesome icons from pages
Comment-out FontAwesome script in head,
Create .svg images to replace FA icons,
Replace all occurences if FA <i> tags with .svg <img> tags

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ slides:
     </div>
     <div class="row news-social-row">
       <div class="col-md-8 news-feed">
-        <h2 class="main-heading grey-bg"><i class="far fa-newspaper f-color"></i>&#160;News</h2>
+        <h2 class="main-heading grey-bg"><img src="assets/img/news.svg" class="icon-middle" alt="News icon">&#160;News</h2>
         <div class="news-scroll">
             {% for item in site.news %}
             <h2>{{ item.title }}</h2>
@@ -57,7 +57,7 @@ slides:
         </div>
       </div>
       <div class="col-md-4">
-        <h2 class="main-heading"><i class="far fa-images f-color"></i>&#160;Social Media</h2>
+        <h2 class="main-heading"><img src="assets/img/social-icon.svg" class="icon-middle" alt="Social media icon">&#160;Social Media</h2>
         <div class="fb-page" data-href="https://www.facebook.com/KankakeeCommunityCollege/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KankakeeCommunityCollege/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KankakeeCommunityCollege/">Kankakee Community College</a></blockquote></div>
       </div>
     </div>
