--- a/baseball.html
+++ b/baseball.html
@@ -1,7 +1,8 @@
 ---
-layout: landing-fb
+layout: sub-nav-landing-fb
 baseurl: ../
 title: Baseball
+base: baseball
 sport: 2
 slides:
   - image: uploads/header-bg2.jpg
@@ -16,6 +17,14 @@ slides:
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-hero3.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/baseball-slide-4_D51_0559.jpg
+    url: 'http://www.kcc.edu'
+    text1: Apply here
+    text2: Ipsum Lorem
+  - image: uploads/baseball-slide-5_D72_7775.jpg
     url: 'http://www.kcc.edu'
     text1: Apply here
     text2: Ipsum Lorem
