Change YAML values for schedule. Add base: to use
in sub-nav links. base's value should be the pages name without,
.html ending

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -1,8 +1,9 @@
 ---
-layout: landing-fb
+layout: sub-nav-landing-fb
 baseurl: ../
-title: Men's Basketball
-sport: 4
+title: "Men's Basketball"
+base: mens-basketball
+sport: 7
 slides:
   - image: uploads/basketball-team_D51_4006.jpg
     url: 'http://www.kcc.edu'
