--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ slides:
     text2: Ipsoum Lorem
 ---
 
-<div class="container slider-container">
+<div class="container index-slider-container">
   <a href="http://region4sports.com/landing/index" class="njcaa-link" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
